# django-shop-deployment

./: .dockerignore  .env.template  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mysite/mysite/: settings.py
