[tool.poetry]
name = "python-django777-prod"
version = "0.1.0"
description = "Django application deployment practice with Poetry and Docker."
authors = ["Yaroslav Vodyanik"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2"
asgiref = "3.6.0"
django-debug-toolbar = "4.0.0"
django-filter = "22.1"
djangorestframework = "3.14.0"
Pillow = "9.4.0"
pytz = "2022.7.1"
sqlparse = "0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
